# vugru-music-mvp

VuGruMusic/: .env  README.md  main.py  pyproject.toml  replit.md
VuGruMusic/auth/: auth_service.py  middleware.py  models.py  supabase_client.py
VuGruMusic/services/: eleven_music.py
VuGruMusic/static/: app.js  auth.js  index.html  login.html  signup.html  styles.css
VuGruMusic/storage/: __init__.py  storage_service.py  track_service.py
